openshift/dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: friends-app
  namespace: saftybear-dev
  labels:
    app: friends-app
spec:
  strategy:
    type: Rolling
    resources: {}
    activeDeadlineSeconds: 21600
    rollingParams:
      timeoutSeconds: 600
      updatePeriodSeconds: 1
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - friends-app
        from:
          kind: ImageStreamTag
          name: 'friends-app:latest'
          namespace: saftybear-dev
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: friends-app
    deploymentconfig: friends-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: friends-app
        deploymentconfig: friends-app
    spec:
      containers:
        - name: friends-app
          image: friends-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      imagePullSecrets: []
  paused: false
