openshift/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: friends-app
  namespace: saftybear-dev
  labels:
    app: friends-app
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: friends-app
    deploymentconfig: friends-app
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
